# clear

./: .eslintrc  .gitignore  .prettierrc  ACKNOWLEDGEMENTS  CNAME  CONTRIBUTING.md  README.md  Session.vim  before-build.bat  biome.json  build-command.txt  download.html  feedback.html  index.html  netlify.toml  output.css  package.json  pnpm-lock.yaml  requirements.txt  rust-toolchain.toml  styles.css  tailwind.config.js  update.html  vercel.json  vite.config.js
.github/ISSUE_TEMPLATE/: bug-report.md  request-a-feature.md
.github/workflows/: main.yml
NSIS/: .gitignore
NSIS-unicode/: installer.nsi
api/: README.md  app.py  index.py  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
api/api/: app.py
api/bruno/: opencollection.yml
api/bruno/environments/: DEVELOPMENT.yml  PRODUCTION.yml
api/bruno/howlongtobeat/: folder.yml
api/bruno/howlongtobeat (broken)/: folder.yml  search results.yml
api/bruno/misc/: folder.yml  health check.yml  version check.yml
api/bruno/sgdb related/: folder.yml  get asset.yml  get image download.yml  search game with steam id.yml  search game.yml
api/bruno/steam import related/: folder.yml  get multiple assets.yml
api/src/: hltb.ts  index.ts  index.tsx  utils.ts  utils.tsx  v1.ts  v1.tsx  v2.ts  v2.tsx
app/: .env.development.example  .env.production.example  .gitignore  biome.json  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js  vite.config.js
app/scripts/: installer.nsi  windows_bundle.bat
app/src/: App.css  App.jsx  App.tsx  Globals.jsx  Globals.tsx  SideBar.jsx  Text.js  index.jsx  index.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: desktop.json  migrated.json
app/src-tauri/src/: main.rs
app/src/components/: GameCardSideBar.jsx  GameCards.jsx  GameCards.tsx  Hotkeys.jsx  Toast.jsx
app/src/components/card/: GameCardSideBar.jsx  GameCards.jsx
app/src/components/modal/: EditFolder.jsx  EditFolderModal.jsx  EditGame.jsx  EditGameModal.jsx  GamePopUp.jsx  Loading.jsx  ModalFrame.jsx  NewFolderModal.jsx  NewGameModal.jsx  NotepadModal.jsx  SettingsModal.jsx
app/src/components/sidebar/: GameCardSideBar.jsx  SideBar.jsx
app/src/components/ui/: ContextMenu.jsx  GameCards.jsx  Hotkeys.jsx  LanguageSelector.jsx
app/src/core/types/: game.ts
app/src/data/api/: sgdbAssets.js
app/src/data/storage/: fileStorage.js  fileStorage.ts  imageStroage.js
app/src/data/system/: locateDialog.js
app/src/libraries/: Icons.jsx  fuzzysearch.js
app/src/locales/: en.json  es.json  fr.json  hi.json  ja.json  ru.json
app/src/modals/: EditFolder.jsx  EditGame.jsx  GamePopUp.jsx  Loading.tsx  NewGame.jsx  Notepad.jsx  Settings.jsx
app/src/services/: folderService.js  gameService.js  keyboardService.js  libraryService.js  notepadService.js  steamService.js  updaterService.js  userSettingsService.js
app/src/stores/: applicationStore.js  contextMenuStore.js  libraryStore.js  modalStore.js  notepadStore.js  searchStore.js  selectedFolderStore.js  selectedGameStore.js  steamStore.js  toastStore.js
app/src/styles/: a11y.css  animations.css  buttons-input.css  scrollbar.css  themes.css  tooltips.css
app/src/utils/: errorHandling.js  generateId.js  internet.js  locationJoin.js  paths.js  preloadGameImages.js  translateText.js
public/: hint.css  hint.min.css
scripts/: beforeBundle.bat  installer.nsi
src/: App.css  App.jsx  Globals.jsx  SideBar.jsx  Signals.js  Signals.jsx  Style.jsx  Styles.jsx  StylesStore.jsx  Text.js  index.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/src/: main.rs
src/components/: GameCardSideBar.jsx  GameCards.jsx  Hotkeys.jsx  Icons.jsx  LanguageSelector.jsx  Text.jsx  Toast.jsx
src/libraries/: Hint.css  Icons.jsx  fuzzysearch.js  parseVDF.js
src/modals/: EditFolder.jsx  EditGame.jsx  GamePopUp.jsx  Loading.jsx  NewFolder.jsx  NewGame.jsx  Notepad.jsx  Settings.jsx
website/: .gitignore  .htaccess  .prettierrc  download.html  feedback.html  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.sh  update.html
