[package]
name = "clear"
version = "0.18.0"
description = "clear - video game library"
authors = ["adithya.zip"]
license = "Unlicense"
repository = "https://github.com/adithyasource/clear"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "window-set-decorations", "os-all", "window-unmaximize", "window-maximize", "window-minimize", "window-start-dragging", "window-close", "shell-open", "protocol-asset", "path-all", "fs-read-file", "fs-create-dir", "fs-copy-file", "fs-write-file", "dialog-open", "fs-exists", "objc-exception", "wry"], default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "4"
window-shadows = "0.2.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
